--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^7.5.0",
-    "intersection-observer": "^0.12.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-is-visible": "^1.2.0",
-    "react-minimal-pie-chart": "^8.3.0",
-    "react-on-screen": "^2.1.1",
-    "react-text-transition": "^3.0.2",
-    "typewriter-effect": "^2.19.0"
+    "react-icons": "^4.6.0",
+    "react-text-transition": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
