--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^7.5.0",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-scroll": "^1.8.8",
